# completed-projects

./: CLI todo list tool  Caeser cipher  File Analyser  Hashing generic lib  Log parser  My own hash  Password CLI tool)  Prgoramming day 1 and 2 basics of python.docx  Pwebio web design project.  README.md  Web design!  calculator.py  d.py  stego (non gui ver).py  unveil pre decryption
Full_Projects/: README.MD  README.md
Full_Projects/LogParser/: ReadME.md  _main_.py  pyproject.toml  xmlTest.py
Full_Projects/LogParser/Tests/: xmlTest.py
Full_Projects/LogParser/src/: CliMod.py  Parser.py  __init__.py
Full_Projects/LogParser/src/Tests/: MalformedEdgeCase.xml  MultiIDFilter.xml  MyTestLog.xml  TimeRange.xml
Full_Projects/Stego/: README.MD  README.md  __main__.py
Full_Projects/Stego/Extras/: README.MD
Full_Projects/Unveil/: Decryptor.py  Encryptor.py  README.MD  _main_.py
Log_parser/Src/: __main__.py
Main future project/: todo list
Mini_Projects/: CLI_tool.py  LogParser1.py  PyWebio.py  README.MD  TodoList_tool.py
Mini_Projects/Fileanalyzer/: README.md
Mini_Projects/LogParser/: __main__.py  pyproject.toml
Mini_Projects/LogParser/src/: README.md  __init__.py  cli.py  parser.py
Mini_Projects/Subnetting_Tool/: README.MD
PS scripts from work/: MBAM  driver patching
PS scripts from work/DCU_packaging/: README.md
PS scripts from work/MBAM_replacement/: Invoke-AppDeployToolkit.ps1  README.md
PS scripts from work/Password Audit/: README.md  __main__  __main__.ps1
PS scripts from work/UpdateStatus/: README.md
PowerShell_Projects/: README.md
(+53 files in other folders)
