[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yourpackage"
version = "1.0.0"
description = "Your CLI tool"
authors = [{ name = "William Richardson" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
